linearization of the AAPI type graph; fewer hard-coded classes and types; still 25 failing overall